alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -33,23 +33,26 @@ nav {
 }
 .dropbtn {
   background-color: transparent;
-  font-size: 18px;
+  font-size: 16px;
   border: none;
-  padding: 40px 60px;
+  padding: 30px 60px;
   margin-right: 70px;
   font-family: "Anonymous Pro", monospace;
-  font-weight: 800;
+  font-weight: 400;
   font-style: normal;
+  letter-spacing: 1px;
   color: #F2EEE4;
 }
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+  font-size: 16px;
   display: none;
   position: absolute;
   background-color: #463857;
   font-family: "Anonymous Pro", monospace;
-  font-weight: 800;
+  font-weight: 400;
   font-style: normal;
+  letter-spacing: 1px;
   min-width: 173px;
   z-index: 1;
 }
